Updated rules for static criteria bar codes to address the wrapping issue

--- a/src/clincoded/static/scss/clincoded/modules/_curator.scss
+++ b/src/clincoded/static/scss/clincoded/modules/_curator.scss
@@ -1310,7 +1310,8 @@ div.react-tabs .ReactTabs__TabPanel--selected {
     background-color: #ddd;
     color: #555;
     cursor: default;
-    padding: 5px 0.725em;
+    padding: 5px 0.72em;
+    font-size: 12px;
     font-weight: bold;
 
     &.benign-strong {
